@@ -1,3 +1,8 @@
+2012-11-06  Fabien Penso <fabien.penso@conovae.com>
+
+	* Sortable stories
+  * 6h
+
 2012-11-05  Fabien Penso <fabien.penso@conovae.com>
 
 	* First
